# ee-serverless-demo

./: LICENSE  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt
basic-serverless-function/: Pulumi.yaml  README.md  __main__.py  pyproject.toml
basic-serverless-function/src/: main.py
function/: requirements.txt
redis-serverless-function/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
redis-serverless-function/src/: main.py  requirements.txt
