[project]
name = "redis-serverless-function"
version = "0.1.0"
description = "Deploy a demo Earth Engine Cloud Run service using Pulumi"
requires-python = ">=3.9"
dependencies = [
    "pulumi-gcp>=8.0.0,<9.0.0",
    "pulumi>=3.0.0,<4.0.0",
]

[dependency-groups]
dev = [
    "flask>=3.1.0",
    "functions-framework>=3.8.2",
    "redis>=5.2.0",
    "ruff>=0.8.0",
]
